Refactored code to read url from config file to generate user_id

--- a/app/middleware/config/.env
+++ b/app/middleware/config/.env
@@ -3,3 +3,5 @@ db_username = postgres
 db_password = postgres
 db_hostname = 192.168.1.16
 db_ port = 5432
+
+user_id_api_endpoint = http://127.0.0.1:8000/users-categories/user-detail
